# claude-autoapprove

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DELIVERABLES.md  EXAMPLES.md  IMPLEMENTATION.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SIMPLE_VERSIONS.md  START_HERE.md  SUMMARY.md  autoapprove.go  build-go.sh  claude_wrapper.py  compare_versions.sh  go.mod  go.sum  main.go  mypy.ini  pyproject.toml  requirements-dev.txt  rules.yaml  setup.py  test-danger.sh  test-idle.sh  test-prompt.sh  test-wrapper.sh  test_new_package.py  test_wrapper.py
.github/workflows/: ci.yml
cmd/claude-autoapprove/: main.go
internal/debug/: logger.go
internal/detection/: detector.go  detector_simple.go  detector_test.go
internal/terminal/: terminal.go
internal/wrapper/: config_test.go  wrapper.go
src/claude_autoapprove/: __init__.py  __main__.py  approval.py  cli.py  config.py  constants.py  detection.py  exceptions.py  terminal.py  utils.py  wrapper.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_detection.py  test_utils.py  test_wrapper_toggle.py
